--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
+atomicwrites==1.4.1
+attrs==23.1.0
+certifi==2023.5.7
+charset-normalizer==2.0.12
+colorama==0.4.6
 Django==2.2.28
+django-debug-toolbar==3.2.4
+Faker==12.0.1
+idna==3.4
+iniconfig==2.0.0
 mixer==7.1.2
+packaging==23.1
 Pillow==8.3.1
+pluggy==0.13.1
+py==1.11.0
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
+python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.26.0
 six==1.16.0
-sqlparse==0.4.3
 sorl-thumbnail==12.7.0
-Faker==12.0.1
-django-debug-toolbar==3.2.4
+sqlparse==0.4.3
+stripe==5.5.0
+toml==0.10.2
+urllib3==1.26.16
