--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ certifi==2023.5.7
 charset-normalizer==2.0.12
 colorama==0.4.6
 Django==2.2.28
+django-active-link==0.1.8
 django-debug-toolbar==3.2.4
 Faker==12.0.1
 idna==3.4
 iniconfig==2.0.0
+isort==5.12.0
 mixer==7.1.2
 packaging==23.1
 Pillow==8.3.1
